tests/ui/derives/derives-span-Default.stderr
error[E0277]: the trait bound `Error: Default` is not satisfied
  --> $DIR/derives-span-Default.rs:8:5
   |
LL | #[derive(Default)]
   |          ------- in this derive macro expansion
LL | struct Struct {
LL |     x: Error,
   |     ^^^^^^^^ the trait `Default` is not implemented for `Error`
   |
help: consider annotating `Error` with `#[derive(Default)]`
   |
LL + #[derive(Default)]
LL | struct Error;
   |

error[E0277]: the trait bound `Error: Default` is not satisfied
  --> $DIR/derives-span-Default.rs:13:5
   |
LL | #[derive(Default)]
   |          ------- in this derive macro expansion
LL | struct TupleStruct(
LL |     Error,
   |     ^^^^^ the trait `Default` is not implemented for `Error`
   |
help: consider annotating `Error` with `#[derive(Default)]`
   |
LL + #[derive(Default)]
LL | struct Error;
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
